style.css
:root {
    --background-color: #1e1e1e;
    --text-color: #ffffff;
    --highlight-color: orange;
    --font-family: 'JetBrains Mono', monospace;
    --font-size-large: 24px;
    --font-size-medium: 30px;
    --font-size-small: 36px;
    --transition-duration: 0.3s;
    --padding-standard: 20px;
}

html {
    scroll-behavior: smooth;
    scroll-snap-type: y mandatory;
    scroll-padding-top: var(--scroll-padding, 64px);
}

body {
    background-color: #121212;
    color: var(--text-color);
    font-family: var(--font-family);
    justify-content: center;
}

nav {
    background-color: var(--background-color);
    padding: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    position: sticky;
    top: 0;
}

nav ul {
    list-style-type: none;
    padding: 0;
    display: flex;
}

nav ul li {
    margin-right: 40px;
}

nav ul li a {
    color: var(--text-color);
    text-decoration: none;
}

nav ul li a:hover {
    color: var(--highlight-color);
    font-weight: 500;
}

header {
    color: var(--highlight-color);
    text-align: center;
    margin: 5px 0;
}

li {
    font-size: var(--font-size-medium);
}

h2, h3 {
    font-size: var(--font-size-small);
    font-weight: 600;
    color: var(--highlight-color);
}

h3 {
    font-size: 32px;
}

section, .about-me, .skills, .project {
    display: flex;
    width: 60%;
    min-height: 100vh;
    justify-content: center;
    align-items: center;
    margin: auto;
    flex-direction: column;
    padding: var(--padding-standard);
    page-break-before: always;
}

.textframe {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: var(--padding-standard);
    flex-wrap: nowrap;
    flex-direction: row;
    padding: var(--padding-standard);
}

@media (max-width: 768px) {
    .textframe {
        flex-wrap: wrap;
        margin: 20px 0;
    }
}

.frame {
    width: fit-content;
    height: fit-content;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: var(--padding-standard);
    border-radius: 20px;
    background-color: var(--background-color);
}

.frame img {
    height: 400px;
    border-radius: 5px;
    text-align: center;
    margin-top: 10px;
}

.text {
    width: auto;
    min-width: 100px;
    margin-top: var(--padding-standard);
}

.text p, .skills-description {
    font-size: var(--font-size-large);
    line-height: 1.5;
}

span {
    font-size: var(--font-size-medium);
    font-weight: 600;
}

.icons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 40px;
    margin: 10px auto;
}

i {
    font-size: 80px;
}

.skills .icon {
    display: flex;
    align-items: center;
    justify-content: center;
    width: fit-content;
    padding: var(--padding-standard);
    border-radius: 10px;
    background-color: var(--background-color);
    transition: all var(--transition-duration) ease;
}

.skills .icon:hover {
    color: var(--highlight-color);
    transform: scale(1.1);
}

.skills .icon p {
    margin: 0;
    font-size: var(--font-size-large);
}

.photoshop-icon {
    width: 100px;
    height: 100px;
    scale: 1.5;
}

.photoshop-icon .background {
    fill: var(--background-color);
}

.photoshop-icon .text {
    fill: var(--text-color);
    transition: fill var(--transition-duration) ease;
}

.icon:hover .photoshop-icon .text {
    fill: var(--highlight-color);
}

.skills-description {
    text-align: center;
}

.contact-info {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 20px;
    padding: 80px;
    border-radius: 20px;
    background-color: var(--background-color);
}

button {
    font-size: var(--font-size-large);
    padding: 10px 20px;
    border-radius: 8px;
    background-color: var(--background-color);
    color: var(--text-color);
    border: none;
    cursor: pointer;
    transition: all var(--transition-duration) ease;
}

button:hover {
    color: var(--highlight-color);
    scale: 1.1;
}

.contact-icons {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 40px;
    padding: 80px;
    border-radius: 20px;
}
.contact-icons .icon {
    display: flex;
    align-items: center;
    justify-content: center;
    width: fit-content;
    padding: var(--padding-standard);
    border-radius: 20px;
    background-color: var(--background-color);
    transition: all var(--transition-duration) ease;
}

.contact-icons a {
    text-decoration: none;
    color: var(--text-color);
}

.contact-icons .icon:hover {
    color: var(--highlight-color);
    transform: scale(1.1);
}

.contact-icons .icon a:hover {
    color: var(--highlight-color);
}

.button {
    font-size: var(--font-size-large);
    font-weight: 700;
    padding: 20px;
    border-radius: 8px;
    background-color: var(--background-color);
    color: var(--text-color);
    text-decoration: none;
    cursor: pointer;
    transition: all var(--transition-duration) ease;
}

.button:hover {
    color: var(--highlight-color);
    scale: 1.1;
    padding: 22px;
}

p {
    margin-bottom: 40px;
}

.contact-description {
    font-size: var(--font-size-medium);
    text-align: center;
}

